# internal/api/server.go
@@ -184,6 +184,7 @@ func (s *Server) Routes() []Route {
 		{Method: "GET", Path: "/api/v1/backups/download", h: s.handleDownloadBackup},
 		{Method: "GET", Path: "/api/v1/network/mesh", h: s.handleMesh},
 		{Method: "PUT", Path: "/api/v1/nodes/{id}/schedulable", h: s.handleSetSchedulable},
+		{Method: "POST", Path: "/api/v1/nodes/{id}/drain", h: s.handleDrainNode},
 		{Method: "GET", Path: "/api/v1/projects", h: s.handleListProjects},
 		{Method: "POST", Path: "/api/v1/projects", h: s.handleCreateProject},
 		{Method: "DELETE", Path: "/api/v1/projects/{project}", h: s.handleDeleteProject},
@@ -198,6 +199,7 @@ func (s *Server) Routes() []Route {
 		{Method: "POST", Path: "/api/v1/projects/{project}/environments/{env}/services/{service}/rollback", h: s.handleRollbackService},
 		{Method: "GET", Path: "/api/v1/projects/{project}/environments/{env}/services/{service}/tasks", h: s.handleServiceTasks},
 		{Method: "GET", Path: "/api/v1/projects/{project}/environments/{env}/services/{service}/revisions", h: s.handleServiceRevisions},
+		{Method: "GET", Path: "/api/v1/projects/{project}/environments/{env}/services/{service}/deployments", h: s.handleServiceDeployments},
 		{Method: "GET", Path: "/api/v1/projects/{project}/environments/{env}/services/{service}/domains", h: s.handleListServiceDomains},
 		{Method: "POST", Path: "/api/v1/projects/{project}/environments/{env}/services/{service}/domains", h: s.handleAddServiceDomain},
 		{Method: "DELETE", Path: "/api/v1/projects/{project}/environments/{env}/services/{service}/domains/{host}", h: s.handleRemoveServiceDomain},
